# Kaplanner

./: README.md  RIP.txt  agendamento.py  cadastrados.txt  conexao.py  erros.py  main.py  planner.db  planner.py  pyproject.toml  replit.nix  usuario.py
GUI/: conexao.py  constantes.py  criar_agendamento.py  gui.py  lista_agend.py  login.py  teste.py
GUI/imagens_telas/: gjghkj.py
Legacy/: agendados.txt  cadastrados.txt  compromisso.py  get_time.py  login.py  main_old.py  pyproject.toml
email/: send.py
